// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRange allows value prop to accept a number 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value euiRangeTooltip__value--left"
        style="right:22.22222222222222%"
      >
        8
      </output>
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange allows value prop to accept empty string 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value=""
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-label="aria-label"
      class="euiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--compressed euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider euiRangeSlider--compressed"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props custom ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="euiRangeTicks"
    >
      <button
        class="euiRangeTick euiRangeTick--isCustom"
        style="left:19.19191919191919%"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiRangeTick euiRangeTick--isCustom"
        style="left:100%"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        100kb
      </button>
    </div>
    <input
      class="euiRangeSlider euiRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props disabled should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack euiRangeTrack--disabled"
  >
    <input
      class="euiRangeSlider"
      disabled=""
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props input should render 1`] = `
<div
  class="euiRangeWrapper euiRange testClass1 testClass2"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-label="aria-label"
      class="euiRangeSlider"
      data-test-subj="test subject string"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max"
        data-test-subj="test subject string"
        id="id"
        max="10"
        min="1"
        name="name"
        step="1"
        style="width:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <label
    class="euiRangeLabel euiRangeLabel--min"
  >
    1
  </label>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <label
    class="euiRangeLabel euiRangeLabel--max"
  >
    10
  </label>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeLevels"
    >
      <span
        class="euiRangeLevel euiRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="euiRangeLevel euiRangeLevel--success"
        style="width:80%"
      />
    </div>
    <input
      class="euiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="20"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
    <input
      class="euiRangeSlider euiRangeSlider--hasRange"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiRange__popover"
>
  <div
    class="euiPopover__anchor"
  >
    <div>
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiRangeInput euiRangeInput--max"
            data-test-subj="test subject string"
            id="id"
            max="10"
            min="1"
            name="name"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <div
      class="euiRangeTicks"
      style="margin:0 -34.48275862068966%;left:0;right:0"
    >
      <button
        class="euiRangeTick"
        style="width:68.96551724137932%"
        tabindex="-1"
        type="button"
        value="1"
      >
        1
      </button>
    </div>
    <input
      class="euiRangeSlider euiRangeSlider--hasTicks"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;

exports[`EuiRange props value should render 1`] = `
<div
  class="euiRangeWrapper euiRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      class="euiRangeSlider"
      id="generated-id"
      max="10"
      min="1"
      step="1"
      type="range"
      value="200"
    />
    <div
      class="euiRangeTooltip"
    >
      <output
        class="euiRangeTooltip__value euiRangeTooltip__value--left"
        style="right:0%"
      >
        before200after
      </output>
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
</div>
`;
